Rewrite `.tips` element structure
Rewrite `.tips` element structure through the "Underscore.js" templates.

--- a/index.html
+++ b/index.html
@@ -291,523 +291,30 @@
 
   <section class="tips">
     <div class="tip-container">
-      <!-- Initial setup -->
-      <article class="tip">
-        <a class="anchor" href="#initial-setup">
-          <h2 id="initial-setup">Первоначальная настройка</h2>
-        </a>
-        <p>
-          Настройка информации о пользователе для всех локальных репозиториев
-        </p>
+      <script type="text/template" id="tip-template">
+        <% _.each(tips, function(tip, index, list) { %>
+        <article class="tip">
+          <a class="anchor" href="#tip-<%= index + 1 %>">
+            <h2 id="tip-<%= index + 1 %>"><%= tip.title %></h2>
+          </a>
+          <p><%= tip.description %></p>
 
-        <hr>
+          <hr>
 
-        <div>
-          <p>
-            Произвести настройку можно двумя способами:
-          </p>
-          <ol>
-            <li>
-              <p>
-                С помощью команд вида <code class="terminal">git config
-                --global</code>:
-              </p>
-              <div>
-                <p>
-                  Устанавливает имя, которое будет отображаться в поле автора у
-                  выполняемых Вами
-                  коммитов
-                </p>
-                <p>
-                  <code
-                    class="terminal"><span
-                    class="terminal__dollar-sign">$ </span>
-                    git config --global user.name '&lt;имя&gt;'</code>
-                </p>
-              </div>
-              <div>
-                <p>
-                  Устанавливает адрес электронной почты, который будет
-                  отображаться
-                  в информации о выполняемых Вами коммитах
-                </p>
-                <p>
-                  <code
-                    class="terminal"><span class="terminal__dollar-sign">$
-              </span>git config --global user.email '&lt;адрес электронной почты
-                    &gt;'</code>
-                </p>
-              </div>
-            </li>
-            <li>
-              <div>
-                <p>
-                  Напрямую через редактирование конфига:
-                </p>
-                <p>
-                  <code class="terminal"><span
-                    class="terminal__dollar-sign">$ </span>nano
-                    ~/.gitconfig</code>
-                </p>
-              </div>
-            </li>
-          </ol>
-        </div>
-      </article>
-
-      <!-- Creating a repository -->
-      <article class="tip">
-        <a class="anchor" href="#init-repo">
-          <h2 id="init-repo">Создание репозитория</h2>
-        </a>
-        <p>
-          Создание нового репозитория или получение его по существующему
-          URL-адресу
-        </p>
-
-        <hr>
-
-        <div>
-          <p>
-            Создаёт новый локальный репозиторий с заданным именем
-          </p>
-          <p>
-            <code class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              init
-              &lt;название проекта&gt;</code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Скачивает репозиторий вместе со всей его историей изменений
-          </p>
-          <p>
-            <code class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              clone
-              &lt;url-адрес&gt;</code>
-          </p>
-        </div>
-      </article>
-
-      <!-- File operations -->
-      <article class="tip">
-        <a class="anchor" href="#files">
-          <h2 id="files">Операции с файлами</h2>
-        </a>
-        <p>
-          Перемещение и удаление версий файлов репозитория
-        </p>
-
-        <hr>
-
-        <div>
-          <p>
-            Удаляет конкретный файл из рабочей директории и индексирует его
-            удаление
-          </p>
-          <p>
-            <code class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              rm &lt;
-              файл&gt;</code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Убирает конкретный файл из контроля версий, но физически оставляет
-            его
-            на своём месте
-          </p>
-          <p>
-            <code class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              rm
-              --cached &lt;файл&gt;</code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Перемещает и переименовывает указанный файл, сразу индексируя его
-            для
-            последующего коммита
-          </p>
-          <p>
-            <code
-              class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              mv
-              &lt;оригинальный файл&gt; &lt;новое имя&gt;</code>
-          </p>
-        </div>
-      </article>
-
-      <!-- Ignoring some files -->
-      <article class="tip">
-        <a class="anchor" href="#ignore">
-          <h2 id="ignore">Игнорирование некоторых файлов</h2>
-        </a>
-        <p>
-          Исключение временных и вторичных файлов и директорий
-        </p>
-
-        <hr>
-
-        <div>
-          <p>
-            Список всех игнорируемых файлов в текущем проекте
-          </p>
-          <p>
-            <code
-              class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              ls-files
-              --others --ignored --exclude-standard</code>
-          </p>
-        </div>
-      </article>
-
-      <!-- Saving fragments -->
-      <article class="tip">
-        <a class="anchor" href="#stash">
-          <h2 id="stash">Сохранение фрагментов</h2>
-        </a>
-        <p>
-          Сохранение и восстановление незавершённых изменений
-        </p>
-
-        <hr>
-
-        <div>
-          <p>
-            Временно сохраняет все незафиксированные изменения отслеживаемых
-            файлов
-          </p>
-          <p>
-            <code class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              stash</code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Восстанавливает состояние ранее сохранённых версий файлов
-          </p>
-          <p>
-            <code class="terminal">
-              <span class="terminal__dollar-sign">$ </span>git stash pop
-            </code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Выводит список всех временных сохранений
-          </p>
-          <p>
-            <code class="terminal">
-              <span class="terminal__dollar-sign">$ </span>git stash list
-            </code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Сбрасывает последние временно сохранённыe изменения
-          </p>
-          <p>
-            <code class="terminal">
-              <span class="terminal__dollar-sign">$ </span>git stash drop
-            </code>
-          </p>
-        </div>
-      </article>
-
-      <!-- Making changes -->
-      <article class="tip">
-        <a class="anchor" href="#changes">
-          <h2 id="changes">Внесение изменений</h2>
-        </a>
-        <p>
-          Просмотр изменений и создание коммитов (фиксация изменений)
-        </p>
-
-        <hr>
-
-        <div>
-          <p>
-            Перечисляет все новые или изменённые файлы, которые нуждаются в
-            фиксации
-          </p>
-          <p>
-            <code class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              status</code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Показывает различия по внесённым изменениям в ещё не
-            проиндексированных
-            файлах
-          </p>
-          <p>
-            <code class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              diff</code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Индексирует указанный файл для последующего коммита
-          </p>
-          <p>
-            <code class="terminal">
-              <span class="terminal__dollar-sign">$ </span>git add &lt;файл&gt;
-            </code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Показывает различия между проиндексированной и последней
-            зафиксированной
-            версиями файлов
-          </p>
-          <p>
-            <code class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              diff
-              --staged</code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Отменяет индексацию указанного файла, при этом сохраняет его
-            содержимое
-          </p>
-          <p>
-            <code class="terminal">
-              <span class="terminal__dollar-sign">$ </span>git reset &lt;файл&gt;
-            </code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Фиксирует проиндексированные изменения и сохраняет их в историю
-            версий
-          </p>
-          <p>
-            <code class="terminal">
-              <span class="terminal__dollar-sign">$ </span>git commit -m '&lt;
-              сообщение с описанием&gt;'
-            </code>
-          </p>
-        </div>
-      </article>
-
-      <!-- Teamwork -->
-      <article class="tip">
-        <a class="anchor" href="#teamwork">
-          <h2 id="teamwork">Коллективная работа</h2>
-        </a>
-        <p>
-          Именованные серии коммитов и соединение результатов работы
-        </p>
-
-        <hr>
-
-        <div>
-          <p>
-            Список именованных веток коммитов с указанием выбранной ветки
-          </p>
-          <p>
-            <code class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              branch</code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Создаёт новую ветку
-          </p>
-          <p>
-            <code class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              branch
-              &lt;имя ветки&gt;</code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Переключается на выбранную ветку и обновляет рабочую директорию до
-            её
-            состояния
-          </p>
-          <p>
-            <code class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              switch -c
-              &lt;имя ветки&gt;</code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Вносит изменения указанной ветки в текущую ветку
-          </p>
-          <p>
-            <code class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              merge &lt;имя
-              ветки&gt;</code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Удаляет выбранную ветку
-          </p>
-          <p>
-            <code class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              branch -d
-              &lt;имя ветки&gt;</code>
-          </p>
-        </div>
-      </article>
-
-      <!-- History view -->
-      <article class="tip">
-        <a class="anchor" href="#history">
-          <h2 id="history">Просмотр истории</h2>
-        </a>
-        <p>
-          Просмотр и изучение истории изменений файлов проекта
-        </p>
-
-        <hr>
-
-        <div>
-          <p>
-            История коммитов для текущей ветки
-          </p>
-          <p>
-            <code
-              class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              log
-              [--oneline] # [упрощённый вид]</code>
-          </p>
-        </div>
-        <div>
-          <p>
-            История изменений конкретного файла, включая его переименование
-          </p>
-          <p>
-            <code class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              log
-              --follow &lt;файл&gt;</code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Показывает разницу между содержанием коммитов двух веток
-          </p>
-          <p>
-            <code
-              class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              diff
-              &lt;первая
-              ветка&gt;...&lt;вторая ветка&gt;</code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Выводит информацию и показывает изменения в выбранном коммите
-          </p>
-          <p>
-            <code class="terminal">
-              <span class="terminal__dollar-sign">$ </span>git show &lt;коммит&gt;
-            </code>
-          </p>
-        </div>
-      </article>
-
-      <!-- Commit restore -->
-      <article class="tip">
-        <a class="anchor" href="#reset">
-          <h2 id="reset">Откат коммитов</h2>
-        </a>
-        <p>
-          Удаление ошибок и корректировка созданной истории
-        </p>
-
-        <hr>
-
-        <div>
-          <p>
-            Отменяет все коммиты после заданного, оставляя все изменения в
-            рабочей
-            директории
-          </p>
-          <p>
-            <code class="terminal">
-              <span class="terminal__dollar-sign">$ </span>git reset &lt;коммит&gt;
-            </code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Сбрасывает всю историю вместе с состоянием рабочей директории до
-            указанного коммита
-          </p>
-          <p>
-            <code class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              reset
-              --hard &lt;коммит&gt;</code>
-          </p>
-        </div>
-      </article>
-
-      <!-- Synchronization with a remote repository -->
-      <article class="tip">
-        <a class="anchor" href="#remote">
-          <h2 id="remote">Синхронизация с удалённым репозиторием</h2>
-        </a>
-        <p>
-          Регистрация удалённого репозитория и обмен изменениями
-        </p>
-
-        <hr>
-
-        <div>
-          <p>
-            Скачивает всю историю из удалённого репозитория
-          </p>
-          <p>
-            <code class="terminal">
-              <span class="terminal__dollar-sign">$ </span>git fetch &lt;удалённый
-              репозиторий&gt;
-            </code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Вносит изменения из ветки удалённого репозитория в текущую ветку
-            локального репозитория
-          </p>
-          <p>
-            <code
-              class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              merge &lt;удалённый
-              репозиторий&gt;/&lt;ветка&gt;</code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Загружает все изменения локальной ветки в удалённый репозиторий
-          </p>
-          <p>
-            <code class="terminal">
-              <span class="terminal__dollar-sign">$ </span>git push &lt;удалённый
-              репозиторий&gt;
-              &lt;ветка&gt;
-            </code>
-          </p>
-        </div>
-        <div>
-          <p>
-            Загружает историю из удалённого репозитория и объединяет её с
-            локальной.
-            pull = fetch + merge
-          </p>
-          <p>
-            <code class="terminal"><span class="terminal__dollar-sign">$ </span>git
-              pull</code>
-          </p>
-        </div>
-      </article>
+          <% _.each(tip.usages, function(usage, index, list) { %>
+          <div>
+            <p><%= usage.description %></p>
+            <p>
+              <code class="terminal">
+                <span class="terminal__dollar-sign">$ </span>
+                <%- usage.command %>
+              </code>
+            </p>
+          </div>
+          <% }); %>
+        </article>
+        <% }); %>
+      </script>
     </div>
   </section>
 
