Refactor `.terminal__dollar-sign`
Replace `.terminal__dollar-sign` with `%text-unselectable` and
`.text-unselectable`.

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
             <p><%= usage.description %></p>
             <p>
               <code class="terminal">
-                <span class="terminal__dollar-sign">$ </span>
+                <span class="text-unselectable">$&nbsp;</span>
                 <%- usage.command %>
               </code>
             </p>
