Fix bug with importing
Fix bug "Uncaught SyntaxError: Cannot use import statement outside a
module" in `index.js`.

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 </footer>
 
 <!-- Form data processing script -->
-<script src="./index.js"></script>
+<script src="./index.js" type="module"></script>
 <!-- Underscore.js -->
 <script
   defer
