style(index): add missing newlines

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   </head>
 
   <body>
-    <noscript
-      >JavaScript отключён или не поддерживается Вашим браузером!</noscript
-    >
+    <noscript>
+      JavaScript отключён или не поддерживается Вашим браузером!
+    </noscript>
 
     <!-- Main content -->
     <main>
@@ -108,8 +108,9 @@
                   href="https://about.gitlab.com"
                   target="_blank"
                   rel="nofollow noopener noreferrer"
-                  >GitLab</a
                 >
+                  GitLab
+                </a>
               </p>
             </div>
 
@@ -144,8 +145,9 @@
                   href="https://github.com"
                   target="_blank"
                   rel="nofollow noopener noreferrer"
-                  >GitHub</a
                 >
+                  GitHub
+                </a>
               </p>
             </div>
 
@@ -295,8 +297,9 @@
                   href="https://desktop.github.com"
                   target="_blank"
                   rel="nofollow noopener noreferrer"
-                  >desktop.github.com</a
                 >
+                  desktop.github.com
+                </a>
               </p>
             </div>
 
@@ -309,8 +312,9 @@
                   href="https://git-scm.com"
                   target="_blank"
                   rel="nofollow noopener noreferrer"
-                  >git-scm.com</a
                 >
+                  git-scm.com
+                </a>
               </p>
             </div>
           </section>
@@ -410,8 +414,8 @@
       </div>
 
       <div>
-        &copy;&nbsp;2022&nbsp;<sup>M</sup><sub>e</sub><sup>S</sup><sub>h</sub
-        ><sub>o</sub><sub>o</sub><sub>t</sub><sup>I</sup><sub>n</sub>
+        &copy;&nbsp;2022&nbsp;<sup>M</sup><sub>e</sub><sup>S</sup><sub>h</sub>
+        <sub>o</sub><sub>o</sub><sub>t</sub><sup>I</sup><sub>n</sub>
       </div>
     </footer>
 
